package codepilotunittest.interfaces;

public interface Directive {
    boolean check();
}
