package com.example.codepilotunittest.testcasegeneration;

import com.example.codepilotunittest.core.TestCase;
import com.example.codepilotunittest.core.TestCases;
import com.example.codepilotunittest.interfaces.TestCaseGenerator;
import java.lang.reflect.Method;
import java.util.List;

public class Method implements TestCaseGenerator {
    @Override
    public TestCases generateTestCases(Object input, List<Directive> directives) {
        TestCases testCases = new TestCases();
        if (input instanceof Method) {
            Method method = (Method) input;
            if (method.isAnnotationPresent(TestConfig.class)) {
                // Create test case based on method's annotations and directives
                TestCase testCase = createTestCaseFromMethod(method, directives);
                testCases.addTestCase(testCase);
            }
        }
        return testCases;
    }

    private TestCase createTestCaseFromMethod(Method method, List<Directive> directives) {
        // Logic to apply directives and create a TestCase based on method details
        // Placeholder implementation
        return new TestCase();
    }
}
